apps/production/fasten/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fasten
  namespace: fasten
spec:
  selector:
    app: fasten
  ports:
    - name: http
      port: 8080
      targetPort: 8080
